--- a/src/style/swiper.scss
+++ b/src/style/swiper.scss
@@ -1,8 +1,10 @@
-.swiper {
+.swiper__common-page {
+    overflow: hidden;
     width: 100%;
-
     padding-bottom: 50px;
+}
 
+.swiper {
 
     &-slide {
         position: relative;
